# spawn

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  state_space  worker_packets
.github/workflows/: ci.yml
api/openapi/: openapi.yaml  tool_ssot.json
api/openapi/schemas/: ActionRequestV1.schema.json  ActionResultV1.schema.json  EventEnvelopeV1.schema.json  (+1 more)
docs/: README.md  SYSTEMD_EVENT_MODEL.md  TOOL_ARCHITECTURE_AND_DEPENDENCIES.md
docs/api/: README.md  openapi.bundle.json  openapi_components.md  ssot_schemas.md
docs/memory/: README.md
docs/telemetry/: ANALYSIS.md  ASSET_MATRIX.md  BASELINE_DECISION_2026-03-04.md  EMITTER_CONTRACT.md  IMPLEMENTATION_PLAN.md  README.md  RUNBOOK.md  SCOPE.md  TRACKER.md
scripts/: check_docs.sh  check_gen.sh  derive_openapi.py  docstrings_sync.py  export_schemas.py  gen.sh  gen_docs.py  gen_docs.sh  gen_grpc.py  link_xdg_paths.sh
src/spawn/: __init__.py  cli.py  codex_alert_log.py  codex_event_source.py  codex_resume_diagnose.py  codex_session_events.py  codex_session_ops.py  contracts.py  grpc_client.py  grpc_server.py  logging_utils.py  runtime_context.py  schema_models.py  spawnctl.py  spawnd.py  tool_ssot.py
state_space/: architecture.decisions.v1.json  dome_ssot_migration_map.v1.json  formal_state_space_spec_v0.json  loop.fsm.schema.json  loop.lifecycle.model.v1.json  loop.phase_transition_dag.v1.json  proposal_register.v1.json  runtime.surface.cloudflared.v1.json  runtime.surface.codex.v1.json  runtime.surface.jq.v1.json  runtime.surface.schema.json  spawn.event.matrix.v1.json  spawn.eventing.model.v1.json  stack_decisions_assessment.v1.json  status.summary.v1.json
state_space.docs/: README.md  high_signal_candidates.json  high_signal_candidates.md  output_1.md  output_2.md  output_3.md  output_4.md  output_5.md  output_6.md  output_7.md  review.normalized.json
tests/: golden_memory_replay.py  seed_catalog_smoke.py  session_context_runtime_smoke.py
tools/codex/: generate_context.py
(+75 files in other folders)
