[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spawn"
version = "0.1.0"
description = "Spawn daemon + CLI substrate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dataconfy>=0.0.1",
  "grpcio>=1.78",
  "pydantic>=2",
  "protobuf>=6.0",
  "xdg-base-dirs>=6",
  "typer>=0.24.1",
  "rich>=14.3.3",
  "jsonschema>=4.26.0",
]

[project.scripts]
spawnd = "spawn.core.service:main"
spawnctl = "spawn.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spawn"]
